Added database connectivity with slick

--- a/product-service/src/main/resources/application.conf
+++ b/product-service/src/main/resources/application.conf
@@ -3,8 +3,16 @@ http {
   port = 9000
 }
 
-db {
-  url = "jdbc:postgresql://localhost:15000/product"
-  user = "product"
-  password = "postgres"
+postgres {
+  connectionPool = "HikariCP"
+  dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
+  properties = {
+    serverName = "localhost"
+    portNumber = "15000"
+    databaseName = "product"
+    user = "product"
+    password = "postgres"
+    url = "jdbc:postgresql://localhost:15000/product"
+  }
+  numThreads = 10
 }
