--- a/product-service/src/main/resources/application.conf
+++ b/product-service/src/main/resources/application.conf
@@ -8,11 +8,11 @@ postgres {
   dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
   properties = {
     serverName = "localhost"
-    portNumber = "15000"
+    portNumber = "15100"
     databaseName = "product"
-    user = "product"
+    user = "postgres"
     password = "postgres"
-    url = "jdbc:postgresql://localhost:15000/product"
+    url = "jdbc:postgresql://localhost:15100/product"
   }
   numThreads = 10
 }
