--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,4 +18,13 @@ services:
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
-      - POSTGRES_DB=order      
+      - POSTGRES_DB=order   
+  cartdb:
+    container_name: cartdb
+    image: postgres:latest
+    ports:
+      - 15102:5432
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=cart      
