--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -27,4 +27,14 @@ services:
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
-      - POSTGRES_DB=cart      
+      - POSTGRES_DB=cart 
+  userdb:
+    container_name: userdb
+    image: postgres:latest
+    ports:
+      - 15103:5432
+    environment: 
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=user
+       
