--- a/user-service/src/main/resources/application.conf
+++ b/user-service/src/main/resources/application.conf
@@ -1,3 +1,8 @@
+http {
+  host = "0.0.0.0"
+  port = 9004
+}
+
 postgres {
     connectionPool = "HikariCP"
     dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
