--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -37,4 +37,13 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=user
+  ratingdb:
+    container_name: ratingdb
+    image: postgres:latest
+    ports:
+      - 15104:5432
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=rating
        
