--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '3.8'
 
 services:
+  rabbitmq:
+    container_name: rabbitmq
+    image: rabbitmq:3.12.6-management-alpine
+    ports:
+      - 5672:5672
+      - 15672:15672
   productdb:
     container_name: productdb
     image: postgres:latest
