--- a/e-commerce-web/package.json
+++ b/e-commerce-web/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.14.7",
+    "@mui/x-data-grid": "^6.18.1",
     "@tanstack/react-query": "^4.33.0",
     "axios": "^1.5.0",
     "prop-types": "^15.8.1",
